<resources>
    <string name="app_name">splash</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="submit">Submit</string>
    <string name="password_recovery">Password recovery</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="company_trading_name">Company trading name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>