<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Driver.DriverResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_centerHorizontal="true"
            android:id="@+id/signIn"
            android:layout_marginTop="15dp"
            android:text="@string/password_recovery"
            android:textColor="#51A8EF"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/mail"
            android:layout_below="@id/signIn"
            android:paddingStart="10dp"
            android:hint="@string/please_enter_email"
            android:inputType="textEmailAddress"
            />


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtEmail"
            android:layout_marginTop="15dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="14dp"
                app:backgroundTint="#51A8EF"
                app:cornerRadius="20dp"
                android:id="@+id/logBtn"
                />
            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/frameLayout"
            android:text="@string/login"
            android:textSize="13sp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            />
    </RelativeLayout>
</ScrollView>