<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Driver.DriverLoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/Driver"
            android:fontFamily="casual"
            android:layout_marginTop="50dp"
            android:text="Driver"
            android:textColor="#51A8EF"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_centerHorizontal="true"
            android:id="@+id/signIn"
            android:layout_marginTop="15dp"
            android:fontFamily="casual"
            android:text="@string/sign_in"
            android:textColor="#51A8EF"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext"
            android:textColor="@color/black"
            android:textColorHint="#cdcdcd"
            android:layout_marginTop="20dp"
            android:textSize="13sp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/mail"
            android:layout_below="@id/signIn"
            android:paddingLeft="10dp"
            android:hint="Please enter your email address"
            android:inputType="textEmailAddress"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:background="@drawable/edittext"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/pass"
            android:textColor="@color/black"
            android:textColorHint="#cdcdcd"
            android:textSize="13sp"
            android:inputType="textPassword"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:hint= "@string/please_enter_your_password"
            android:id="@+id/password"
            android:layout_below="@id/email">

        </com.google.android.material.textfield.TextInputEditText>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chShowPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/forgot_password"
                android:textColor="@color/black" />


        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="0dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="14sp"
                app:backgroundTint="@color/my_light_primary"
                app:cornerRadius="20dp"
                android:id="@+id/logBtn"
                />
            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frameLayout"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/Signup"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:text="@string/signup"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/left"
            android:id="@+id/googleSignIn"
            android:layout_centerHorizontal="true"
            android:clipChildren="true"
            android:clickable="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:text="@string/sign_in_with"
                />

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="14dp"
                android:id="@+id/gg"
                android:clickable="true"
                android:background="@drawable/google"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>